<resources>
  <string name="app_name">SciBowl Gym for Middle School</string>
  <string name="quiz_mode">Quiz Mode</string>
  <string name="moderator_mode">Moderator Mode</string>
  <string name="study_mode">Study Mode</string>
  <string name="choose_a_topic">Choose a Topic:</string>
  <string name="biology">Life Science</string>
  <string name="earth_and_space">Earth and Space</string>
  <string name="mathematics">Mathematics</string>
  <string name="generalScience">General Science</string>
  <string name="energy">Energy</string>
  <string name="physics">Physical Science</string>
  <string name="or_generate_random_questions">Or Generate Random Questions:</string>
  <string name="random">Random</string>
  <string name="select_question_time_limits">Select Round Time Limits:</string>
  <string name="tossup">Tossup:</string>
  <string name="bonus">Bonus:</string>
  <string name="start_set">Start Set</string>
  <string name="menu">Menu</string>
  <string name="finish_set">Finish Set</string>
  <string name="next">Next</string>
  <string name="and_select_a_round">And Select a Round:</string>
  <string name="show_answer">Show Answer</string>
  <string name="choose_a_question_set">Choose a Question Set:</string>
  <string name="start_timer">Start Timer</string>
  <string name="about">About</string>
  <string name="help">Help</string>
  <string name="about_header">
    This page provides information about the app\'s creation and licensing.
  </string>
  <string name="app_purpose_label">
    This app is designed to help students and teams prepare for Science Bowl competitions. This app
    is not sponsored by the National Science Bowl®, U.S. Department of Energy or the U.S. Government.
  </string>
  <string name="creator_label">
    This app is released by Emily Liu, captain of The Harker School Science Bowl Team, and members
    of <a href="http://www.sciencebowlhub.org">Science Bowl HUB</a>, a volunteer group to promote
    Science Bowl participation.  This app is based on an app released under the MIT license by
    <a href="https://github.com/jakepolatty/HighSchoolScienceBowlPractice-Android">Jake Polatty</a>,
    co-captain of the Stanford University Online High School Science Bowl Team.
  </string>
  <string name="accreditation_label">
    This app uses questions released by the National Science Bowl® that have been used at regional
    competitions in previous years. The questions taken from the National Science Bowl® website are
    the property of the Department of Energy and are available to the general public at no cost.
  </string>
  <string name="help_header">
    This page provides information about the app\'s different modes and settings.
  </string>
  <string name="quiz_mode_label">
    Quiz Mode: Multiple-choice only quiz mode that tests your knowledge against a clock and tracks
    statistics of your performance. You can select any category or pull questions from all
    categories (random option), and can also choose the time limits for tossup and bonus questions.
  </string>
  <string name="moderator_mode_label">
    Moderator Mode: Designed for coaches and team leaders to use in meetings to run practice rounds.
    You can select any specific set from the online database by the set number and round, and can
    set custom time limits. Reader Mode also includes an 8-minute half timer so you can run full
    competition-style scrimmage rounds under time constraints.
  </string>
  <string name="study_mode_label">
    Study Mode: Casual mode used for studying questions without a time limit. You can select any
    category (or all categories) and any round difficulty level (or allow questions from all rounds).
  </string>
  <string name="app_logo">App Logo</string>
  <string name="stats">Stats</string>
  <string name="quiz_results">Quiz Results</string>
  <string name="no_results_available">No Results Available</string>
  <string name="_8_minute_halves">8 Minute Halves:</string>
  <string name="on">On</string>
  <string name="off">Off</string>
  <string name="round_timer">Round Timer:</string>
  <string name="pause">Pause</string>
  <string name="start_round">Start Round</string>
</resources>
