<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/backgroundColor"
  tools:context="com.sciencebowlhub.scibowlgym.ui.HomePage">

  <TextView
    android:id="@+id/appNameLabel"
    android:layout_width="286dp"
    android:layout_height="150dp"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:layout_marginStart="40dp"
    android:layout_marginLeft="40dp"
    android:layout_marginTop="20dp"
    android:gravity="center_horizontal"
    android:text="@string/app_name"
    android:textAlignment="center"
    android:textColor="@android:color/white"
    android:textSize="39.0sp"
    android:textStyle="bold"/>

  <Button
    android:id="@+id/quizModeOptionButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/appNameLabel"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="20dp"
    android:width="150dp"
    android:background="@drawable/homepagebutton"
    android:onClick="openQuizModeSettings"
    android:text="@string/quiz_mode"
    android:textAllCaps="false"
    android:textColor="@android:color/white"
    android:textSize="18sp"/>

  <Button
    android:id="@+id/readerModeOptionButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/quizModeOptionButton"
    android:layout_alignStart="@+id/quizModeOptionButton"
    android:layout_alignLeft="@+id/quizModeOptionButton"
    android:layout_marginTop="25dp"
    android:width="150dp"
    android:background="@drawable/homepagebutton"
    android:onClick="openReaderModeSettings"
    android:text="@string/moderator_mode"
    android:textAllCaps="false"
    android:textColor="@android:color/white"
    android:textSize="18sp"/>

  <Button
    android:id="@+id/studyModeOptionButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/readerModeOptionButton"
    android:layout_alignStart="@+id/readerModeOptionButton"
    android:layout_alignLeft="@+id/readerModeOptionButton"
    android:layout_marginTop="25dp"
    android:width="150dp"
    android:background="@drawable/homepagebutton"
    android:onClick="openStudyModeSettings"
    android:text="@string/study_mode"
    android:textAllCaps="false"
    android:textColor="@android:color/white"
    android:textSize="18sp"/>

  <Button
    android:layout_width="50dp"
    android:layout_height="50dp"
    android:layout_alignParentStart="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentBottom="true"
    android:layout_marginStart="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginBottom="8dp"
    android:background="@drawable/homepagecirclebutton"
    android:onClick="openAboutPage"
    android:text="@string/about"
    android:textSize="13sp"/>

  <Button
    android:layout_width="50dp"
    android:layout_height="50dp"
    android:layout_alignParentEnd="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentBottom="true"
    android:layout_marginEnd="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="8dp"
    android:background="@drawable/homepagecirclebutton"
    android:onClick="openHelpPage"
    android:text="@string/help"
    android:textSize="13sp"/>

  <ImageView
    android:layout_width="301dp"
    android:layout_height="255dp"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="14dp"
    android:contentDescription="@string/app_logo"
    android:src="@mipmap/ic_launcher_foreground"
    />

</RelativeLayout>
