<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/backgroundColor"
  tools:context="com.sciencebowlhub.scibowlgym.ui.StudyModeSettingsPage">

  <android.support.v7.widget.Toolbar
    android:id="@+id/toolbar"
    android:layout_width="304dp"
    android:layout_height="wrap_content"
    android:layout_alignParentStart="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:layout_alignParentEnd="true"
    android:layout_alignParentRight="true"
    android:background="?attr/colorPrimary"
    android:minHeight="?attr/actionBarSize"
    android:theme="?attr/actionBarTheme"
    tools:layout_editor_absoluteY="0dp"/>

  <TextView
    android:id="@+id/studyModeLabel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBottom="@+id/toolbar"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="16dp"
    android:text="@string/study_mode"
    android:textColor="@android:color/white"
    android:textSize="18sp"
    android:textStyle="bold"/>

  <Button
    android:id="@+id/menuButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBaseline="@+id/studyModeLabel"
    android:layout_alignBottom="@+id/studyModeLabel"
    android:layout_alignParentStart="true"
    android:layout_alignParentLeft="true"
    android:background="@null"
    android:drawableStart="@drawable/ic_back"
    android:drawableLeft="@drawable/ic_back"
    android:onClick="returnMainMenu"
    android:text="@string/menu"
    android:textAllCaps="false"
    android:textColor="@color/white100"
    android:textSize="17sp"/>

  <ScrollView
    android:id="@+id/scrollView2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@id/toolbar">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:gravity="center_horizontal"
      android:orientation="vertical">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/choose_a_topic"
        android:textColor="@color/white100"
        android:textSize="18sp"/>

      <LinearLayout
        android:id="@+id/topicOptionGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <RadioGroup
          android:id="@+id/leftTopicOptionGroup"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="25dp"
          android:layout_marginRight="25dp"
          android:orientation="vertical">

          <ToggleButton
            android:id="@+id/biologyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="130dp"
            android:background="@drawable/homepagebutton"
            android:onClick="selectBiology"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textOff="@string/biology"
            android:textOn="@string/biology"/>

          <ToggleButton
            android:id="@+id/earthAndSpaceButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:width="130dp"
            android:background="@drawable/homepagebutton"
            android:onClick="selectEarthAndSpace"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textOff="@string/earth_and_space"
            android:textOn="@string/earth_and_space"/>

          <ToggleButton
            android:id="@+id/mathButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:width="130dp"
            android:background="@drawable/homepagebutton"
            android:onClick="selectMath"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textOff="@string/mathematics"
            android:textOn="@string/mathematics"/>

        </RadioGroup>

        <RadioGroup
          android:id="@+id/rightTopicOptionGroup"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="vertical">

          <ToggleButton
            android:id="@+id/generalScienceButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="130dp"
            android:background="@drawable/homepagebutton"
            android:onClick="selectGeneralScience"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textOff="@string/generalScience"
            android:textOn="@string/generalScience"/>

          <ToggleButton
            android:id="@+id/energyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:width="130dp"
            android:background="@drawable/homepagebutton"
            android:onClick="selectEnergy"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textOff="@string/energy"
            android:textOn="@string/energy"/>

          <ToggleButton
            android:id="@+id/physicsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:width="130dp"
            android:background="@drawable/homepagebutton"
            android:onClick="selectPhysics"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textOff="@string/physics"
            android:textOn="@string/physics"/>

        </RadioGroup>
      </LinearLayout>

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/or_generate_random_questions"
        android:textColor="@color/white100"
        android:textSize="18sp"/>

      <ToggleButton
        android:id="@+id/randomButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:width="130dp"
        android:background="@drawable/homepagebutton"
        android:checked="true"
        android:onClick="selectRandom"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textOff="@string/random"
        android:textOn="@string/random"/>

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/and_select_a_round"
        android:textColor="@color/white100"
        android:textSize="18sp"/>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/homepagebutton"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <NumberPicker
          android:id="@+id/roundNumPicker"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:descendantFocusability="blocksDescendants"
          android:minWidth="80dp"
          android:solidColor="@color/buttonTransGrey"/>
      </LinearLayout>

      <Button
        android:id="@+id/startSetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:width="120dp"
        android:background="@drawable/startsetbutton"
        android:onClick="startStudyMode"
        android:text="@string/start_set"
        android:textAllCaps="false"
        android:textColor="@color/white100"/>
    </LinearLayout>
  </ScrollView>


</RelativeLayout>
