<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/backgroundColor"
  tools:context="com.sciencebowlhub.scibowlgym.ui.ModeratorModeSettingsPage">

  <android.support.v7.widget.Toolbar
    android:id="@+id/toolbar"
    android:layout_width="304dp"
    android:layout_height="wrap_content"
    android:layout_alignParentStart="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:layout_alignParentEnd="true"
    android:layout_alignParentRight="true"
    android:background="?attr/colorPrimary"
    android:minHeight="?attr/actionBarSize"
    android:theme="?attr/actionBarTheme"
    tools:layout_editor_absoluteY="0dp"/>

  <TextView
    android:id="@+id/readerModeLabel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBottom="@+id/toolbar"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="16dp"
    android:text="@string/moderator_mode"
    android:textColor="@android:color/white"
    android:textSize="18sp"
    android:textStyle="bold"/>

  <Button
    android:id="@+id/menuButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBaseline="@+id/readerModeLabel"
    android:layout_alignBottom="@+id/readerModeLabel"
    android:layout_alignParentStart="true"
    android:layout_alignParentLeft="true"
    android:background="@null"
    android:drawableStart="@drawable/ic_back"
    android:drawableLeft="@drawable/ic_back"
    android:onClick="returnMainMenu"
    android:text="@string/menu"
    android:textAllCaps="false"
    android:textColor="@color/white100"
    android:textSize="17sp"/>

  <ScrollView
    android:id="@+id/scrollView2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@id/toolbar">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:gravity="center_horizontal"
      android:orientation="vertical">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/choose_a_question_set"
        android:textColor="@color/white100"
        android:textSize="18sp"/>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/homepagebutton"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <NumberPicker
          android:id="@+id/setNumPicker"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="50dp"
          android:layout_marginRight="50dp"
          android:descendantFocusability="blocksDescendants"
          android:minWidth="80dp"
          android:solidColor="@color/buttonTransGrey"/>

        <NumberPicker
          android:id="@+id/roundNumPicker"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:descendantFocusability="blocksDescendants"
          android:minWidth="80dp"
          android:solidColor="@color/buttonTransGrey"/>
      </LinearLayout>

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/select_question_time_limits"
        android:textColor="@color/white100"
        android:textSize="18sp"/>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/tossup"
          android:textColor="@color/white100"
          android:textSize="16sp"/>

        <Spinner
          android:id="@+id/tossupTimeSelector"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:dropDownWidth="140dp"
          android:entries="@array/reader_tossup_time_options"
          android:popupBackground="@color/buttonTransGreyPressed"
          android:spinnerMode="dropdown"
          android:theme="@style/spinnerStyle">
        </Spinner>
      </LinearLayout>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="8dp"
          android:layout_marginRight="8dp"
          android:text="@string/bonus"
          android:textColor="@color/white100"
          android:textSize="16sp"/>

        <Spinner
          android:id="@+id/bonusTimeSelector"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:dropDownWidth="140dp"
          android:entries="@array/reader_bonus_time_options"
          android:popupBackground="@color/buttonTransGreyPressed"
          android:spinnerMode="dropdown"
          android:theme="@style/spinnerStyle">
        </Spinner>
      </LinearLayout>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="8dp"
          android:layout_marginRight="8dp"
          android:text="@string/_8_minute_halves"
          android:textColor="@color/white100"
          android:textSize="15sp"/>

        <ToggleButton
          android:id="@+id/roundTimerButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="@drawable/homepagebutton"
          android:minWidth="60dp"
          android:minHeight="35dp"
          android:textAllCaps="false"
          android:textColor="@android:color/white"
          android:textOff="@string/off"
          android:textOn="@string/on"/>
      </LinearLayout>

      <Button
        android:id="@+id/startSetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:width="120dp"
        android:background="@drawable/startsetbutton"
        android:onClick="startReaderMode"
        android:text="@string/start_set"
        android:textAllCaps="false"
        android:textColor="@color/white100"/>
    </LinearLayout>
  </ScrollView>

</RelativeLayout>
