<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/backgroundColor"
  tools:context="com.sciencebowlhub.scibowlgym.ui.AboutPage">

  <android.support.v7.widget.Toolbar
    android:id="@+id/toolbar"
    android:layout_width="304dp"
    android:layout_height="wrap_content"
    android:layout_alignParentStart="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:layout_alignParentEnd="true"
    android:layout_alignParentRight="true"
    android:background="?attr/colorPrimary"
    android:minHeight="?attr/actionBarSize"
    android:theme="?attr/actionBarTheme"
    tools:layout_editor_absoluteY="0dp"/>

  <TextView
    android:id="@+id/aboutPageLabel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBottom="@+id/toolbar"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="16dp"
    android:text="@string/about"
    android:textColor="@android:color/white"
    android:textSize="18sp"
    android:textStyle="bold"/>

  <Button
    android:id="@+id/menuButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBaseline="@+id/aboutPageLabel"
    android:layout_alignBottom="@+id/aboutPageLabel"
    android:layout_alignParentStart="true"
    android:layout_alignParentLeft="true"
    android:background="@null"
    android:drawableStart="@drawable/ic_back"
    android:drawableLeft="@drawable/ic_back"
    android:onClick="returnMainMenu"
    android:text="@string/menu"
    android:textAllCaps="false"
    android:textColor="@color/white100"
    android:textSize="17sp"/>

  <ScrollView
    android:id="@+id/scrollView2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@id/toolbar">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:gravity="center_horizontal"
      android:orientation="vertical">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/about_header"
        android:textColor="@color/white100"
        android:textSize="18sp"
        android:textStyle="bold"/>

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/app_purpose_label"
        android:textColor="@color/metadataLabelText"
        android:textSize="15sp"/>

      <TextView
        android:id="@+id/creatorLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:linksClickable="true"
        android:text="@string/creator_label"
        android:textColor="@color/metadataLabelText"
        android:textColorLink="@color/buttonTransGreenPressed"
        android:textSize="15sp"/>

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/accreditation_label"
        android:textColor="@color/metadataLabelText"
        android:textSize="15sp"/>
    </LinearLayout>
  </ScrollView>

</RelativeLayout>
