<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/backgroundColor"
  tools:context="com.sciencebowlhub.scibowlgym.ui.StudyModePage">

  <android.support.v7.widget.Toolbar
    android:id="@+id/toolbar"
    android:layout_width="304dp"
    android:layout_height="wrap_content"
    android:layout_alignParentStart="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:layout_alignParentEnd="true"
    android:layout_alignParentRight="true"
    android:background="?attr/colorPrimary"
    android:minHeight="?attr/actionBarSize"
    android:theme="?attr/actionBarTheme"
    tools:layout_editor_absoluteY="0dp"/>

  <TextView
    android:id="@+id/studyModeLabel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBottom="@+id/toolbar"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="16dp"
    android:text="@string/study_mode"
    android:textColor="@android:color/white"
    android:textSize="18sp"
    android:textStyle="bold"/>

  <!--katex.hourglass.in.mathlib.MathView-->

  <Button
    android:id="@+id/menuButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBaseline="@+id/studyModeLabel"
    android:layout_alignBottom="@+id/studyModeLabel"
    android:layout_alignParentStart="true"
    android:layout_alignParentLeft="true"
    android:background="@null"
    android:drawableStart="@drawable/ic_back"
    android:drawableLeft="@drawable/ic_back"
    android:onClick="returnMainMenu"
    android:text="@string/menu"
    android:textAllCaps="false"
    android:textColor="@color/white100"
    android:textSize="17sp"/>

  <Button
    android:id="@+id/nextButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBaseline="@+id/studyModeLabel"
    android:layout_alignBottom="@+id/studyModeLabel"
    android:layout_alignParentEnd="true"
    android:layout_alignParentRight="true"
    android:background="@null"
    android:drawableEnd="@drawable/ic_next"
    android:drawableRight="@drawable/ic_next"
    android:onClick="loadNextQuestion"
    android:text="@string/next"
    android:textAllCaps="false"
    android:textColor="@color/white100"
    android:textSize="17sp"/>


  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@id/toolbar">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:gravity="center_horizontal"
      android:orientation="vertical">

      <TextView
        android:id="@+id/roundSetNumLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/metadataLabelText"
        android:textSize="18sp"/>

      <TextView
        android:id="@+id/questionNumLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/metadataLabelText"
        android:textSize="18sp"/>

      <TextView
        android:id="@+id/categoryTypeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/metadataLabelText"
        android:textSize="18sp"/>

      <katex.hourglass.in.mathlib.MathView
        android:id="@+id/questionTextLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:linksClickable="true"
        android:textColorLink="@color/buttonTransGreenPressed"
        app:setTextColor="@color/white100"
        app:setTextSize="11sp"/>

      <katex.hourglass.in.mathlib.MathView
        android:id="@+id/answerOptionsLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:linksClickable="true"
        android:textColorLink="@color/buttonTransGreenPressed"
        app:setTextColor="@color/studyAnswerOptionsText"
        app:setTextSize="11sp"/>

      <Button
        android:id="@+id/showAnswerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:width="120dp"
        android:background="@drawable/homepagebutton"
        android:onClick="showAnswer"
        android:text="@string/show_answer"
        android:textAllCaps="false"
        android:textColor="@color/white100"/>

      <katex.hourglass.in.mathlib.MathView
        android:id="@+id/answerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="-40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        android:linksClickable="true"
        android:textColorLink="@color/buttonTransGreenPressed"
        android:visibility="invisible"
        app:setTextColor="@color/timerLabelText"
        app:setTextSize="11sp"/>
    </LinearLayout>
  </ScrollView>
</RelativeLayout>
